아코디언 메뉴 구성중

--- a/src/main.html
+++ b/src/main.html
@@ -2,44 +2,64 @@
 <html lang="ko-KR">
 <head>
 
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <link type="text/css" rel="stylesheet" charset="utf-8" href="main.css">
+    <script src="main.js"></script>
     <meta charset="UTF-8">
     <title>Parking Pass</title>
 </head>
 
     <body>
         <div id = wrap>
-            <div id="menubar">
-                    <nav>
-                        <ul>
-                            <li><a><img src="good sw.jpg" width="220px" height="80px"></a></li>
-                            <li class="dropdown">
-                                <div class="dropdown-menu">주차장관리</div>
+            <div id = header>
+                <div id="menubar">
+                        <header>
+                            <ul>
+                                <li><a><img src="good sw.jpg" width="220px" height="80px"></a></li>
+                                <li class="dropdown">
+                                    <div class="dropdown-menu">주차장관리</div>
+                                    <div class="dropdown-content">
+                                        <a href="#">Menu3-1</a>
+                                    </div>
+                                </li>
+                                <li class="dropdown">
+                                    <div class="dropdown-menu">정기회원 등록</div>
+                                    <div class="dropdown-content">
+                                        <a href="#">Menu3-1</a>
+                                    </div>
+                                </li>
+                                <li class="dropdown">
+                                <div class="dropdown-menu">실적 관리</div>
                                 <div class="dropdown-content">
                                     <a href="#">Menu3-1</a>
                                 </div>
-                            </li>
-                            <li class="dropdown">
-                                <div class="dropdown-menu">정기회원 등록</div>
-                                <div class="dropdown-content">
-                                    <a href="#">Menu3-1</a>
-                                </div>
-                            </li>
-                            <li class="dropdown">
-                            <div class="dropdown-menu">실적 관리</div>
-                            <div class="dropdown-content">
-                                <a href="#">Menu3-1</a>
-                            </div>
-                            </li>
-                            <li class="dropdown">
-                                <div class="dropdown-menu">환경 설정</div>
-                                <div class="dropdown-content">
-                                    <a href="#">Menu3-1</a>
-                                </div>
-                            </li>
-                            <li class="name"><a href="#">홍길동</a></li>
-                        </ul>
-                     </nav>
+                                </li>
+                                <li class="dropdown">
+                                    <div class="dropdown-menu">환경 설정</div>
+                                    <div class="dropdown-content">
+                                        <a href="#">Menu3-1</a>
+                                    </div>
+                                </li>
+                                <li class="name"><a href="#">홍길동</a></li>
+                            </ul>
+                        </header>
+                </div>
+            </div> <!-- header -->
+
+            <div id="gate">
+                <nav>
+                    <ul>
+                        <li class="gatelist"><a href="">Gate1</a>
+                            <div class="calculator">정산기1</div>
+                            <div class="calculator">정산기2</div>
+                        </li>
+                        <li><a href="">Gate2</a></li>
+                        <li><a href="">Gate3</a></li>
+                        <li><a href="">Enterance-LPR1</a></li>
+                        <li><a href="">Enterance-LPR2</a></li>
+                        <li><a href="">Enterance-LPR3</a></li>
+                    </ul>
+                </nav>
             </div>
 
 
