section, article 추가

--- a/src/main.html
+++ b/src/main.html
@@ -53,13 +53,31 @@
                             <div class="calculator">정산기1</div>
                             <div class="calculator">정산기2</div>
                         </li>
-                        <li><a href="">Gate2</a></li>
-                        <li><a href="">Gate3</a></li>
-                        <li><a href="">Enterance-LPR1</a></li>
-                        <li><a href="">Enterance-LPR2</a></li>
-                        <li><a href="">Enterance-LPR3</a></li>
+                        <li class="gatelist"><a href="">Gate2</a></li>
+                        <li class="gatelist"><a href="">Gate3</a></li>
+                        <li class="gatelist"><a href="">Enterance-LPR1</a></li>
+                        <li class="gatelist"><a href="">Enterance-LPR2</a></li>
+                        <li class="gatelist"><a href="">Enterance-LPR3</a></li>
                     </ul>
                 </nav>
+            </div>
+
+            <div id = "list">
+                <section>
+                  <ul>
+
+
+                  </ul>
+                </section>
+            </div>
+
+            <div id = "list2">
+                <article>
+                    <ul>
+
+
+                    </ul>
+                </article>
             </div>
 
 
