--- a/src/main.html
+++ b/src/main.html
@@ -14,6 +14,7 @@
             <div id = header>
                 <div id="menubar">
                         <header>
+                            <table border="1px" bordercolor="red">
                             <ul>
                                 <li><a><img src="good sw.jpg" width="220px" height="80px"></a></li>
                                 <li class="dropdown">
@@ -23,25 +24,27 @@
                                     </div>
                                 </li>
                                 <li class="dropdown">
-                                    <div class="dropdown-menu">정기회원 등록</div>
+                                    <div class="dropdown-menu" style="padding-left:12px; border-left: 1px solid #c1cae1;">정기회원 등록</div>
                                     <div class="dropdown-content">
                                         <a href="#">Menu3-1</a>
                                     </div>
                                 </li>
                                 <li class="dropdown">
-                                <div class="dropdown-menu">실적 관리</div>
+                                <div class="dropdown-menu" style="padding-left:12px; border-left: 1px solid #c1cae1;">실적 관리</div>
                                 <div class="dropdown-content">
                                     <a href="#">Menu3-1</a>
                                 </div>
                                 </li>
                                 <li class="dropdown">
-                                    <div class="dropdown-menu">환경 설정</div>
+                                    <div class="dropdown-menu" style="padding-left:12px; border-left: 1px solid #c1cae1;">환경 설정</div>
                                     <div class="dropdown-content">
                                         <a href="#">Menu3-1</a>
                                     </div>
                                 </li>
+
                                 <li class="name"><a href="#">홍길동</a></li>
                             </ul>
+                            </table>
                         </header>
                 </div>
             </div> <!-- header -->
