--- a/src/main.html
+++ b/src/main.html
@@ -65,16 +65,27 @@
                 </nav>
             </div>
 
-            <div id = "list">
+            <div id = "list"> <!-- section -->
                 <section>
-                  <ul>
+                    <div id="equipment">
+                        <table class="table1"> <!--color #e7edf2 -->
+                              <th colspan="3" style="background-color: #0091f7; color: white">장비현황</th>
+                                    <tr>
+                                        <td style="background-color: #deeefc">상태</td>
+                                        <td style="background-color: #deeefc">주차장명</td>
+                                        <td style="background-color: #deeefc">정산기명</td>
+                                    </tr>
+                                        <td style="background-color: #f2f5f9">가나다</td>
 
 
-                  </ul>
+
+
+                          </table>
+                    </div>
                 </section>
             </div>
 
-            <div id = "list2">
+            <div id = "list2"> <!-- article -->
                 <article>
                     <ul>
 
