--- a/src/main.html
+++ b/src/main.html
@@ -49,43 +49,66 @@
                 </div>
             </div> <!-- header -->
 
-            <div id="gate">
+            <div id="accordian">
                 <nav>
                     <ul>
-                        <li class="gatelist"><a href="">Gate1</a>
-                            <div class="calculator">정산기1</div>
-                            <div class="calculator">정산기2</div>
+                        <li class="active">
+                            <h3 style="border-bottom:1px solid #383950;"><span class="icon-gate"></span>Gate1</h3>
+                            <ul>
+                                <li><a href="#">정산기1</a></li>
+                                <li><a href="#">정산기2</a></li>
+                            </ul>
                         </li>
-                        <li class="gatelist"><a href="">Gate2</a></li>
-                        <li class="gatelist"><a href="">Gate3</a></li>
-                        <li class="gatelist"><a href="">Enterance-LPR1</a></li>
-                        <li class="gatelist"><a href="">Enterance-LPR2</a></li>
-                        <li class="gatelist"><a href="">Enterance-LPR3</a></li>
+                        <li>
+                            <h3 style="border-bottom:1px solid #383950;"><span class="icon-gate2"></span>Gate2</h3>
+                            <ul>
+                                <li><a href="#">정산기1</a></li>
+                                <li><a href="#">정산기2</a></li>
+
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
             </div>
 
-            <div id = "list"> <!-- section -->
+            <!-- section -->
+            <div id = "list">
                 <section>
                     <div id="equipment">
-                        <table class="table1"> <!--color #e7edf2 -->
-                              <th colspan="3" style="background-color: #0091f7; color: white">장비현황</th>
-                                    <tr>
-                                        <td style="background-color: #deeefc">상태</td>
-                                        <td style="background-color: #deeefc">주차장명</td>
-                                        <td style="background-color: #deeefc">정산기명</td>
+                        <!--
+                        <table class="table1" height="100%">
+                              <th colspan="3" height="20%" style="background-color: #0091f7; color: white">장비현황</th>
+                                    <tr height="20%">
+                                        <td width="20%" style="background-color: #deeefc">상태</td>
+                                        <td width="40%" style="background-color: #deeefc">주차장명</td>
+                                        <td width="40%" style="background-color: #deeefc">정산기명</td>
                                     </tr>
-                                        <td style="background-color: #f2f5f9">가나다</td>
-
-
-
-
-                          </table>
+                                    <tr height="60%">
+                                        <td style="background-color: #f2f5f9">GOOD</td>
+                                    </tr>
+                        </table>
+                        -->
+                    </div>
+                    <div id="wrong">
+                        <!--
+                        <table class="table2" height="100%">
+                            <th colspan="3" height="20%" style="background-color: #f14b7a; color: white">오인식 List</th>
+                            <tr height="20%">
+                                <td width="20%" style="background-color: #fbebf4">No.</td>
+                                <td width="40%" style="background-color: #fbebf4">입차일시</td>
+                                <td width="40%" style="background-color: #fbebf4">차량번호</td>
+                            </tr>
+                            <tr height="60%">
+                                <td style="background-color: #f2f5f9">GOOD</td>
+                            </tr>
+                        </table>
+                        -->
                     </div>
                 </section>
             </div>
 
-            <div id = "list2"> <!-- article -->
+            <!-- article -->
+            <div id = "list2">
                 <article>
                     <ul>
 
@@ -93,7 +116,6 @@
                     </ul>
                 </article>
             </div>
-
 
 
 
