--- a/src/main.html
+++ b/src/main.html
@@ -4,6 +4,8 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <link type="text/css" rel="stylesheet" charset="utf-8" href="main.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
     <meta charset="UTF-8">
     <title>Parking Pass</title>
@@ -127,6 +129,6 @@
 
 
 
-        </div> <!-- wrap -->
+            </div> <!-- wrap -->
     </body>
 </html>
