--- a/src/main.html
+++ b/src/main.html
@@ -16,7 +16,7 @@
             <div id = header>
                 <div id="menubar">
                         <header>
-                            <table border="1px" bordercolor="red">
+                            <table border="1px">
                             <ul>
                                 <li><a><img src="good sw.jpg" width="220px" height="80px"></a></li>
                                 <li class="dropdown">
