--- a/src/main.html
+++ b/src/main.html
@@ -22,6 +22,7 @@
                                 <li class="dropdown">
                                     <div class="dropdown-menu">주차장관리</div>
                                     <div class="dropdown-content">
+
                                         <a href="#">Menu3-1</a>
                                     </div>
                                 </li>
@@ -49,9 +50,9 @@
                             </table>
                         </header>
                 </div>
-            </div> <!-- header -->
+            </div> <!-- header end -->
 
-            <div id="accordian">
+            <div id="accordian"> <!-- 왼쪽 아코디언 메뉴 -->
                 <nav>
                     <ul>
                         <li class="active">
@@ -73,10 +74,9 @@
                 </nav>
             </div>
 
-            <!-- section -->
-            <div id = "list">
-                <section>
-                    <div id="equipment">
+            <!-- section start-->
+            <div id = "container">
+                <div class="section equipment">
                         <!--
                         <table class="table1" height="100%">
                               <th colspan="3" height="20%" style="background-color: #0091f7; color: white">장비현황</th>
@@ -90,8 +90,8 @@
                                     </tr>
                         </table>
                         -->
-                    </div>
-                    <div id="wrong">
+               </div>
+                <div class="section wronglist">
                         <!--
                         <table class="table2" height="100%">
                             <th colspan="3" height="20%" style="background-color: #f14b7a; color: white">오인식 List</th>
@@ -105,11 +105,15 @@
                             </tr>
                         </table>
                         -->
-                    </div>
-                </section>
-            </div>
+                </div>
+                <div class="section wrongsite">
 
-            <!-- article -->
+
+                </div>
+
+            </div> <!-- container end -->
+
+            <!-- article start -->
             <div id = "list2">
                 <article>
                     <ul>
