--- a/src/main.html
+++ b/src/main.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
     <meta charset="UTF-8">
-    <title>Parking Pass</title>
+    <title>(주) Parking Pass</title>
 </head>
 
     <body>
@@ -77,26 +77,27 @@
             <!-- section start-->
             <div id = "container">
                 <div class="section equipment">
-                        <!--
                         <table class="table1" height="100%">
-                              <th colspan="3" height="20%" style="background-color: #0091f7; color: white">장비현황</th>
+                              <th colspan="3" height="20%" style="background: #0091f7; color: white">장비현황</th>
                                     <tr height="20%">
-                                        <td width="20%" style="background-color: #deeefc">상태</td>
+                                        <td width="20%" style="background: #deeefc">상태</td>
                                         <td width="40%" style="background-color: #deeefc">주차장명</td>
                                         <td width="40%" style="background-color: #deeefc">정산기명</td>
                                     </tr>
                                     <tr height="60%">
                                         <td style="background-color: #f2f5f9">GOOD</td>
+                                        <td style="background-color: #f2f5f9">A 주차장</td>
+                                        <td style="background-color: #f2f5f9">입구1</td>
                                     </tr>
                         </table>
-                        -->
+
                </div>
                 <div class="section wronglist">
-                        <!--
+                    <!--
                         <table class="table2" height="100%">
                             <th colspan="3" height="20%" style="background-color: #f14b7a; color: white">오인식 List</th>
                             <tr height="20%">
-                                <td width="20%" style="background-color: #fbebf4">No.</td>
+                                <td width="20%" style="background: #fbebf4">No.</td>
                                 <td width="40%" style="background-color: #fbebf4">입차일시</td>
                                 <td width="40%" style="background-color: #fbebf4">차량번호</td>
                             </tr>
@@ -117,7 +118,17 @@
             <div id = "list2">
                 <article>
                     <ul>
-
+                        <table class="table1" height="100%" style="margin-top: 24px">
+                            <th colspan="3" height="20%" style="background: #0091f7; color: white">장비현황</th>
+                            <tr height="20%">
+                                <td width="20%" style="background: #deeefc">상태</td>
+                                <td width="40%" style="background-color: #deeefc">주차장명</td>
+                                <td width="40%" style="background-color: #deeefc">정산기명</td>
+                            </tr>
+                            <tr height="60%">
+                                <td style="background-color: #f2f5f9">GOOD</td>
+                            </tr>
+                        </table>
 
                     </ul>
                 </article>
@@ -125,14 +136,6 @@
 
 
 
-
-
-
-
-
-
-
-
-            </div> <!-- wrap -->
+        </div> <!-- wrap -->
     </body>
 </html>
