--- a/src/main.html
+++ b/src/main.html
@@ -126,11 +126,20 @@
             </div> <!-- container end -->
 
             <!-- article start -->
-            <div id = "list2">
-                <article>
-                    <ul>
-                    </ul>
-                </article>
+            <div id = "inoutlist">
+                <div class="articleCarIn" style="float: left">
+                  <table class="table4" height="100%">
+                      <th colspan="3" height="20%" style="background: #2d375e; color: white; font-weight:bold">입출차 현황</th>
+                      <tr>
+                          <td width="40%" style="background: #232532">입차일시</td>
+                          <td width="30%" style="background: #232532">입구명</td>
+                          <td width="30%" style="background: #232532">차량번호</td>
+                      </tr>
+                      <tr height="60%">
+                          <td style="background-color: #232532">1</td>
+                      </tr>
+                  </table>
+                </div>
             </div>
 
 
