--- a/src/main.html
+++ b/src/main.html
@@ -76,7 +76,7 @@
 
             <!-- section start-->
             <div id = "container">
-                <div class="section equipment" style="float: left"> <!--  overflow: auto" 스크롤 -->
+                <div class="section equipment" style="float: left; overflow-x: hidden; overflow-y:auto"> <!--  overflow: auto" 스크롤 -->
                         <table class="table1" height="100%">
                               <th colspan="3" height="20%" style="background: #0091f7; color: white">장비현황</th>
 
@@ -90,6 +90,47 @@
                                         <td style="background-color: #f2f5f9">A 주차장</td>
                                         <td style="background-color: #f2f5f9">입구1</td>
                                     </tr>
+                                    <tr height="60%">
+                                        <td style="background-color: #f2f5f9">GOOD</td>
+                                        <td style="background-color: #f2f5f9">A 주차장</td>
+                                        <td style="background-color: #f2f5f9">입구1</td>
+                                    </tr>
+                                    <tr height="60%">
+                                        <td style="background-color: #f2f5f9">GOOD</td>
+                                        <td style="background-color: #f2f5f9">A 주차장</td>
+                                        <td style="background-color: #f2f5f9">입구1</td>
+                                    </tr>
+                                    <tr height="60%">
+                                        <td style="background-color: #f2f5f9">GOOD</td>
+                                        <td style="background-color: #f2f5f9">A 주차장</td>
+                                        <td style="background-color: #f2f5f9">입구1</td>
+                                    </tr>
+                                    <tr height="60%">
+                                        <td style="background-color: #f2f5f9">GOOD</td>
+                                        <td style="background-color: #f2f5f9">A 주차장</td>
+                                        <td style="background-color: #f2f5f9">입구1</td>
+                                    </tr>
+                                    <tr height="60%">
+                                        <td style="background-color: #f2f5f9">GOOD</td>
+                                        <td style="background-color: #f2f5f9">A 주차장</td>
+                                        <td style="background-color: #f2f5f9">입구1</td>
+                                    </tr>
+                                    <tr height="60%">
+                                        <td style="background-color: #f2f5f9">GOOD</td>
+                                        <td style="background-color: #f2f5f9">A 주차장</td>
+                                        <td style="background-color: #f2f5f9">입구1</td>
+                                    </tr>
+                                    <tr height="60%">
+                                        <td style="background-color: #f2f5f9">GOOD</td>
+                                        <td style="background-color: #f2f5f9">A 주차장</td>
+                                        <td style="background-color: #f2f5f9">입구1</td>
+                                    </tr>
+                                    <tr height="60%">
+                                        <td style="background-color: #f2f5f9">GOOD</td>
+                                        <td style="background-color: #f2f5f9">A 주차장</td>
+                                        <td style="background-color: #f2f5f9">입구1</td>
+                                    </tr>
+
 
                         </table>
                 </div>
@@ -127,16 +168,13 @@
 
             <!-- article start -->
             <div id = "inoutlist">
-                <div class="articleCarIn" style="float: left">
+                <div class="articleCarIn" style="overflow-x: hidden; overflow-y:auto; float: left">
                   <table class="table4" height="100%">
                       <th colspan="3" height="20%" style="background: #2d375e; color: white; font-weight:bold">입출차 현황</th>
                       <tr>
                           <td width="40%" style="background: #232532">입차일시</td>
                           <td width="30%" style="background: #232532">입구명</td>
                           <td width="30%" style="background: #232532">차량번호</td>
-                      </tr>
-                      <tr height="60%">
-                          <td style="background-color: #232532">1</td>
                       </tr>
                   </table>
                 </div>
