--- a/src/main.html
+++ b/src/main.html
@@ -19,31 +19,31 @@
                             <table border="1px">
                             <ul>
                                 <li><a><img src="good sw.jpg" width="220px" height="80px"></a></li>
-                                <li class="dropdown">
-                                    <div class="dropdown-menu">주차장관리</div>
-                                    <div class="dropdown-content">
+                                        <li class="dropdown">
+                                            <div class="dropdown-menu">주차장관리</div>
+                                            <div class="dropdown-content">
 
-                                        <a href="#">Menu3-1</a>
-                                    </div>
-                                </li>
-                                <li class="dropdown">
-                                    <div class="dropdown-menu" style="padding-left:12px; border-left: 1px solid #c1cae1;">정기회원 등록</div>
-                                    <div class="dropdown-content">
-                                        <a href="#">Menu3-1</a>
-                                    </div>
-                                </li>
-                                <li class="dropdown">
-                                <div class="dropdown-menu" style="padding-left:12px; border-left: 1px solid #c1cae1;">실적 관리</div>
-                                <div class="dropdown-content">
-                                    <a href="#">Menu3-1</a>
-                                </div>
-                                </li>
-                                <li class="dropdown">
-                                    <div class="dropdown-menu" style="padding-left:12px; border-left: 1px solid #c1cae1;">환경 설정</div>
-                                    <div class="dropdown-content">
-                                        <a href="#">Menu3-1</a>
-                                    </div>
-                                </li>
+                                                <a href="#">Menu3-1</a>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown">
+                                            <div class="dropdown-menu" style="padding-left:12px; border-left: 1px solid #c1cae1;">정기회원 등록</div>
+                                            <div class="dropdown-content">
+                                                <a href="#">Menu3-1</a>
+                                            </div>
+                                        </li>
+                                        <li class="dropdown">
+                                        <div class="dropdown-menu" style="padding-left:12px; border-left: 1px solid #c1cae1;">실적 관리</div>
+                                        <div class="dropdown-content">
+                                            <a href="#">Menu3-1</a>
+                                        </div>
+                                        </li>
+                                        <li class="dropdown">
+                                            <div class="dropdown-menu" style="padding-left:12px; border-left: 1px solid #c1cae1;">환경 설정</div>
+                                            <div class="dropdown-content">
+                                                <a href="#">Menu3-1</a>
+                                            </div>
+                                        </li>
 
                                 <li class="name"><a href="#">홍길동</a></li>
                             </ul>
@@ -74,111 +74,12 @@
                 </nav>
             </div>
 
-            <!-- section start-->
+            <!-- section(contents) start-->
             <div id = "container">
-                <div class="section equipment" style="float: left; overflow-x: hidden; overflow-y:auto"> <!--  overflow: auto" 스크롤 -->
-                        <table class="table1" height="100%">
-                              <th colspan="3" height="20%" style="background: #0091f7; color: white">장비현황</th>
+                <h1 style="text-align: center; margin-top: 200px; color: white"> 개발 컨텐츠 영역</h1>
 
-                                    <tr height="20%">
-                                        <td width="20%" style="font-weight: bold; background: #deeefc">상태</td>
-                                        <td width="40%" style="font-weight: bold; background-color: #deeefc">주차장명</td>
-                                        <td width="40%" style="font-weight: bold; background-color: #deeefc">정산기명</td>
-                                    </tr>
-                                    <tr height="60%">
-                                        <td style="background-color: #f2f5f9">GOOD</td>
-                                        <td style="background-color: #f2f5f9">A 주차장</td>
-                                        <td style="background-color: #f2f5f9">입구1</td>
-                                    </tr>
-                                    <tr height="60%">
-                                        <td style="background-color: #f2f5f9">GOOD</td>
-                                        <td style="background-color: #f2f5f9">A 주차장</td>
-                                        <td style="background-color: #f2f5f9">입구1</td>
-                                    </tr>
-                                    <tr height="60%">
-                                        <td style="background-color: #f2f5f9">GOOD</td>
-                                        <td style="background-color: #f2f5f9">A 주차장</td>
-                                        <td style="background-color: #f2f5f9">입구1</td>
-                                    </tr>
-                                    <tr height="60%">
-                                        <td style="background-color: #f2f5f9">GOOD</td>
-                                        <td style="background-color: #f2f5f9">A 주차장</td>
-                                        <td style="background-color: #f2f5f9">입구1</td>
-                                    </tr>
-                                    <tr height="60%">
-                                        <td style="background-color: #f2f5f9">GOOD</td>
-                                        <td style="background-color: #f2f5f9">A 주차장</td>
-                                        <td style="background-color: #f2f5f9">입구1</td>
-                                    </tr>
-                                    <tr height="60%">
-                                        <td style="background-color: #f2f5f9">GOOD</td>
-                                        <td style="background-color: #f2f5f9">A 주차장</td>
-                                        <td style="background-color: #f2f5f9">입구1</td>
-                                    </tr>
-                                    <tr height="60%">
-                                        <td style="background-color: #f2f5f9">GOOD</td>
-                                        <td style="background-color: #f2f5f9">A 주차장</td>
-                                        <td style="background-color: #f2f5f9">입구1</td>
-                                    </tr>
-                                    <tr height="60%">
-                                        <td style="background-color: #f2f5f9">GOOD</td>
-                                        <td style="background-color: #f2f5f9">A 주차장</td>
-                                        <td style="background-color: #f2f5f9">입구1</td>
-                                    </tr>
-                                    <tr height="60%">
-                                        <td style="background-color: #f2f5f9">GOOD</td>
-                                        <td style="background-color: #f2f5f9">A 주차장</td>
-                                        <td style="background-color: #f2f5f9">입구1</td>
-                                    </tr>
-
-
-                        </table>
-                </div>
-                <div class="section wronglist" style="float: left"> <!-- 현재 article 영역에 배치되어 있어 section 영역에 드러나지 않는 문제 발생 -->
-                        <table class="table2" height="100%">
-                            <th colspan="3" height="20%" style="background: #f14b7a; color: white">오인식 List</th>
-                                <tr height="20%">
-                                    <td width="20%" style="font-weight: bold; background: #fbebf4">No.</td>
-                                    <td width="40%" style="font-weight: bold; background-color: #fbebf4">입차일시</td>
-                                    <td width="40%" style="font-weight: bold; background-color: #fbebf4">차량번호</td>
-                                </tr>
-                                <tr height="60%">
-                                    <td style="background-color: #f2f5f9">1</td>
-                                </tr>
-                        </table>
-                </div>
-                <div class="section wrongsite" style="float: left">
-                    <table class="table3" height="100%">
-                        <th colspan="6" height="20%" style="background: #5984ff; color: white">지정위치 위반(거주자용)</th>
-                        <tr height="20%">
-                            <td width="15%" style="font-weight: bold; background: #dfe3ff">입차일시</td>
-                            <td width="15%" style="font-weight: bold; background: #dfe3ff">주차장명</td>
-                            <td width="10%" style="font-weight: bold; background: #dfe3ff">현재 주차구역</td>
-                            <td width="10%" style="font-weight: bold; background: #dfe3ff">정기권 주차구역</td>
-                            <td width="10%" style="font-weight: bold; background: #dfe3ff">차량번호</td>
-                            <td width="5%" style="font-weight: bold; background: #dfe3ff">SMS 발송</td>
-                        </tr>
-                        <tr height="60%">
-                            <td style="background-color: #f2f5f9">1</td>
-                        </tr>
-                    </table>
-                </div>
 
             </div> <!-- container end -->
-
-            <!-- article start -->
-            <div id = "inoutlist">
-                <div class="articleCarIn" style="overflow-x: hidden; overflow-y:auto; float: left">
-                  <table class="table4" height="100%">
-                      <th colspan="3" height="20%" style="background: #2d375e; color: white; font-weight:bold">입출차 현황</th>
-                      <tr>
-                          <td width="40%" style="background: #232532">입차일시</td>
-                          <td width="30%" style="background: #232532">입구명</td>
-                          <td width="30%" style="background: #232532">차량번호</td>
-                      </tr>
-                  </table>
-                </div>
-            </div>
 
 
 
